Revert "eliminate dum dirty level distance punishment"
This reverts commit ea6c617e0f34c6d9ff74748a95e5884074d3dc05.

--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -279,6 +279,7 @@
 	"mmorpg.advancement.title.factorystation": "Factory Station",
 	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
 	"mmorpg.advancement.title.level": "Level",
+	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
 	"mmorpg.advancement.title.lootbag": "Loot Bag",
 	"mmorpg.advancement.title.mapbag": "Map Bag",
 	"mmorpg.advancement.title.mapdevice": "Map Device",
@@ -939,6 +940,7 @@
 	"mmorpg.advancement.desc.chaosorb": "Gives Chaos Stats. These Stats can be good or bad. Chaos stats can't be removed, so choose wisely which item you modify.",
 	"mmorpg.advancement.desc.currencybag": "Currency Bag automatically picks up Mine and Slash ores, currencies etc",
 	"mmorpg.advancement.desc.factorystation": "Turns bad gears into items of higher rarity.",
+	"mmorpg.advancement.desc.levelpenalty": "When you kill a mob that is too high or too low level, the item and exp drops will be reduced. Try to kill mobs within 5 levels of yours.",
 	"mmorpg.advancement.desc.levelup": "Every level milestone allows items to spawn with new and better affixes, sets and so on. Loot new gear to find out and power up!",
 	"mmorpg.advancement.desc.levelup10": "Starting at lvl 10, mobs will start dropping currencies and adventure maps (per default config).",
 	"mmorpg.advancement.desc.lootbag": "Loot Bag automatically picks up gears, spells, runes etc",
