--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -280,6 +280,7 @@
 	"mmorpg.advancement.title.factorystation": "장비 공장",
 	"mmorpg.advancement.title.firstadventuremap": "첫 모험 지도!",
 	"mmorpg.advancement.title.level": "레벨",
+	"mmorpg.advancement.title.levelpenalty": "레벨 페널티",
 	"mmorpg.advancement.title.lootbag": "전리품 가방",
 	"mmorpg.advancement.title.mapbag": "지도 가방",
 	"mmorpg.advancement.title.mapdevice": "지도 장치",
@@ -940,6 +941,7 @@
 	"mmorpg.advancement.desc.chaosorb": "혼돈 능력치를 부여합니다. 이 능력치는 좋을 수도 나쁠 수도 있습니다. 혼돈 능력치는 바꿀 수 없으므로, 잘 생각해서 개조해야 합니다.",
 	"mmorpg.advancement.desc.currencybag": "재화 가방은 Mine and Slash 모드의 광석과 재화들을 자동으로 줍습니다.",
 	"mmorpg.advancement.desc.factorystation": "안좋은 장비들을 더 좋은 등급의 장비로 만들 수 있습니다.",
+	"mmorpg.advancement.desc.levelpenalty": "너무 레벨이 높거나 낮은 몹을 잡으면, 아이템과 경험치의 양이 감소합니다. 자신의 레벨과 5레벨 이내로 차이나는 몹을 잡아보세요.",
 	"mmorpg.advancement.desc.levelup": "레벨이 오를 수록 장비들이 새롭고 더 좋은 수식어나 세트 효과 등을 달고 나옵니다. 새 장비를 얻고 전리품을 얻으러 떠나세요!",
 	"mmorpg.advancement.desc.levelup10": "레벨 10부터, 몹들이 재화나 탐험 지도를 떨어뜨립니다 ( 기본 설정이라면 ).",
 	"mmorpg.advancement.desc.lootbag": "전리품 가방은 장비, 주문, 룬 등을 자동으로 줍습니다.",
