--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -286,6 +286,7 @@
 	"mmorpg.advancement.title.factorystation": "锻造台",
 	"mmorpg.advancement.title.firstadventuremap": "第一个冒险地图!",
 	"mmorpg.advancement.title.level": "等级",
+	"mmorpg.advancement.title.levelpenalty": "等级惩罚",
 	"mmorpg.advancement.title.lootbag": "战利品袋",
 	"mmorpg.advancement.title.mapbag": "地图袋",
 	"mmorpg.advancement.title.mapdevice": "地图装置",
@@ -946,6 +947,7 @@
 	"mmorpg.advancement.desc.chaosorb": "给与混沌属性. 这些属性可能是好的也可能是坏的. 无法删除混乱属性信息, 因此请明智的选择你要修改的物品",
 	"mmorpg.advancement.desc.currencybag": "通货袋可以自动拾取挖矿与砍杀的矿石、通货等",
 	"mmorpg.advancement.desc.factorystation": "将不好的装备变成更高的稀有度.",
+	"mmorpg.advancement.desc.levelpenalty": "当你杀死一个太高或太低的怪物时, 物品和经验将会减少. 尝试击杀和你等级相差5级以内的怪物.",
 	"mmorpg.advancement.desc.levelup": "每个等级的里程碑都允许使用新的以及更好的词缀、套装等物品的生成!获取新的战利品来提升自己",
 	"mmorpg.advancement.desc.levelup10": "从10级开始, 怪物将会开始掉落通货和冒险地图(默认配置).",
 	"mmorpg.advancement.desc.lootbag": "战利品袋可以自动拾取装备、法术和符文等",
