--- a/src/main/resources/assets/mmorpg/lang/zh_tw.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_tw.json
@@ -286,6 +286,7 @@
 	"mmorpg.advancement.title.factorystation": "鍛造臺",
 	"mmorpg.advancement.title.firstadventuremap": "第壹個冒險地圖!",
 	"mmorpg.advancement.title.level": "等級",
+	"mmorpg.advancement.title.levelpenalty": "等級懲罰",
 	"mmorpg.advancement.title.lootbag": "戰利品袋",
 	"mmorpg.advancement.title.mapbag": "地圖袋",
 	"mmorpg.advancement.title.mapdevice": "地圖裝置",
@@ -946,6 +947,7 @@
 	"mmorpg.advancement.desc.chaosorb": "給與混沌屬性. 這些屬性可能是好的也可能是壞的. 無法刪除混亂屬性信息, 因此請明智的選擇妳要修改的物品",
 	"mmorpg.advancement.desc.currencybag": "通貨袋可以自動拾取挖礦與砍殺的礦石、通貨等",
 	"mmorpg.advancement.desc.factorystation": "將不好的裝備變成更高的稀有度.",
+	"mmorpg.advancement.desc.levelpenalty": "當妳殺死壹個太高或太低的怪物時, 物品和經驗將會減少. 嘗試擊殺和妳等級相差5級以內的怪物.",
 	"mmorpg.advancement.desc.levelup": "每個等級的裏程碑都允許使用新的以及更好的詞綴、套裝等物品的生成!獲取新的戰利品來提升自己",
 	"mmorpg.advancement.desc.levelup10": "從10級開始, 怪物將會開始掉落通貨和冒險地圖(默認配置).",
 	"mmorpg.advancement.desc.lootbag": "戰利品袋可以自動拾取裝備、法術和符文等",
